chore: removed next tag

--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "url-polyfill": "^1.1.5"
   },
   "publishConfig": {
-    "access": "public",
-    "tag": "next"
+    "access": "public"
   },
   "husky": {
     "hooks": {
