--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salte-auth/bitbucket",
-  "version": "1.0.0-rc.1",
+  "version": "3.0.0",
   "main": "dist/bitbucket.min.js",
   "module": "dist/bitbucket.min.mjs",
   "types": "dist/bitbucket.d.ts",
